unpackaged/main/default/objects/PurchaserPlanAssn/fields/Corp_ID__c.field-meta.xml
<CustomField>
    <fullName>Corp_ID__c</fullName>
    <description>Corp ID to support integration of purchaser plan association</description>
    <externalId>true</externalId>
    <label>Corp ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>