unpackaged/main/default/objects/PurchaserPlanAssn/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to show the relationship between a Purchaser Plan and a Group account(Purchaser Group from EDW)</description>
    <label>Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchaser Plan Associations</relationshipLabel>
    <relationshipName>Purchaser_Plan_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>