unpackaged/main/default/objects/PurchaserPlanAssn/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <description>Group ID of the purchaser plan association</description>
    <externalId>true</externalId>
    <label>Group ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>