unpackaged/main/default/objects/PurchaserPlanAssn/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>License of the purchaser plan association</description>
    <label>License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>License</valueSetName>
    </valueSet>
</CustomField>