unpackaged/main/default/objects/PurchaserPlanAssn/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Network</valueSetName>
    </valueSet>
</CustomField>