unpackaged/main/default/objects/PurchaserPlanAssn/fields/Purchaser_Plan_Assn_ID__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Plan_Assn_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID for Purchaser plan association, for integration use</description>
    <externalId>true</externalId>
    <label>Purchaser Plan Assn ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>