unpackaged/main/default/objects/PurchaserPlanAssn/fields/Purchaser_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Plan_ID__c</fullName>
    <description>Used by integration for mapping purchaser plans</description>
    <externalId>true</externalId>
    <label>Purchaser Plan ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>